feat: added segmented controls. changed select component. add accessibility to dropdown

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@
         --card: hsl(224 71% 4%);
         --card-foreground: hsl(213 31% 91%);
 
-        --primary: #349188;
+        --primary: #3730a3;
         --primary-foreground: #e2fffc;
 
         --secondary: hsl(216, 38%, 10%);
