--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -1,7 +1,6 @@
 .statistics-grid {
-    @apply p-4;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    @apply p-4 grid grid-cols-1 sm:grid-cols-4;
+    /* grid-template-columns: repeat(4, 1fr); */
     gap: 20px;
 }
 .dashboard-grid {
